# xrpl-boundless-starter

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
cli/: Cargo.toml
docker/: rippled.Dockerfile
escrow/: Cargo.toml
escrow/src/: lib.rs
skills/r-u-satoshi/: SKILL.md
skills/the-rich-get-richer/: SKILL.md
skills/xrpl-zk-escrow/: SKILL.md
skills/xrpl-zk-escrow-quickstart/: SKILL.md
skills/xrpl-zk-escrow-ui/: SKILL.md
tests/: e2e.rs  helpers.rs  rippled.cfg
ui/: index.html
zkvm/example-proof/: Cargo.toml
zkvm/example-proof/guest/: Cargo.toml
zkvm/example-proof/guest/src/: main.rs
zkvm/example-proof/src/: lib.rs
