[package]
name = "xrpl-risc0-starter"
version = "0.1.0"
edition = "2024"
description = "A starter project for building XRPL Escrows gated by RISC Zero ZKVM proofs"
license = "Apache-2.0"
readme = "README.md"

[workspace]
resolver = "2"
members = ["zkvm/example-proof", "escrow"]

[workspace.dependencies]
anyhow = "1"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1"
xrpl-wasm-stdlib = "0.8"
risc0-verifier-xrpl-wasm = { git = "https://github.com/boundless-xyz/risc0-xrpl-wasm", rev = "e2bb3d3133ff4bde8fa6537f0bbc930d69698a4b", default-features = false }

[dev-dependencies]
anyhow = "1"
serial_test = "3.3"
risc0-verifier-xrpl-wasm = { workspace = true, features = ["std"] }
hex = "0.4"
rand = "0.8.5"
risc0-zkvm = { version = "3.0.4", features = ["prove"] }
example-proof-builder = { path = "zkvm/example-proof" }
test-utils = { git = "https://github.com/boundless-xyz/risc0-xrpl-wasm", rev = "e2bb3d3133ff4bde8fa6537f0bbc930d69698a4b" }
serde_json.workspace = true

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
